--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,6 +21,28 @@
             "https://*.linkedin.com/*",
             "https://*.pinterest.com/*"
         ],
+        "content_scripts": [
+            {
+                "js": [
+                    "content-script.js"
+                ],
+                "matches": [
+                    "https://*.facebook.com/*",
+                    "https://*.tiktok.com/*",
+                    "https://*.instagram.com/*",
+                    "https://*.youtube.com/*",
+                    "https://*.twitter.com/*",
+                    "https://*.x.com/*",
+                    "https://*.discord.com/*",
+                    "https://*.discordapp.com/*",
+                    "https://*.skype.com/*",
+                    "https://*.snapchat.com/*",
+                    "https://*.reddit.com/*",
+                    "https://*.linkedin.com/*",
+                    "https://*.pinterest.com/*"
+                ]
+            }
+        ],
         "permissions": [
             "storage",
             "scripting",
@@ -30,8 +52,7 @@
             {
                 "resources": [
                     "index.html",
-                    "static/js/*.js",
-                    "static/css/*.css"
+                    "assets/*"
                 ],
                 "matches": [
                     "<all_urls>"
