transmitted blocked sites to content-script

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -48,6 +48,10 @@
             "scripting",
             "tabs"
         ],
+        "background": {
+            "service_worker": "service_worker.js",
+            "type": "module"
+        },
         "web_accessible_resources": [
             {
                 "resources": [
