--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,42 +6,18 @@
         "action": {
             "default_popup": "index.html"
         },
-        "host_permissions": [
-            "https://*.facebook.com/*",
-            "https://*.tiktok.com/*",
-            "https://instagram.com/*",
-            "https://*.youtube.com/*",
-            "https://*.twitter.com/*",
-            "https://*.x.com/*",
-            "https://*.discord.com/*",
-            "https://*.discordapp.com/*",
-            "https://*.skype.com/*",
-            "https://*.snapchat.com/*",
-            "https://*.reddit.com/*",
-            "https://*.linkedin.com/*",
-            "https://*.pinterest.com/*"
-        ],
         "content_scripts": [
             {
                 "js": [
                     "content-script.js"
                 ],
                 "matches": [
-                    "https://*.facebook.com/*",
-                    "https://*.tiktok.com/*",
-                    "https://*.instagram.com/*",
-                    "https://*.youtube.com/*",
-                    "https://*.twitter.com/*",
-                    "https://*.x.com/*",
-                    "https://*.discord.com/*",
-                    "https://*.discordapp.com/*",
-                    "https://*.skype.com/*",
-                    "https://*.snapchat.com/*",
-                    "https://*.reddit.com/*",
-                    "https://*.linkedin.com/*",
-                    "https://*.pinterest.com/*"
+                    "<all_urls>"
                 ]
             }
+        ],
+        "host_permissions": [
+            "<all_urls>"
         ],
         "permissions": [
             "storage",
